spade-tests/src/snapshots/spade_tests__wordlength_inference__simple_subtraction_ia.snap
---
source: spade-tests/src/wordlength_inference.rs
---
fn f(a: int<4>) -> int<0> {
  a - a + 1
}
entity main(clk: clock, rst: bool) -> int<0> { f(1) }


error: Word length mismatch. Got 2 bits but expected 0 bits
  ┌─ testinput:4:48
  │
4 │ entity main(clk: clock, rst: bool) -> int<0> { f(1) }
  │                                                ^^^^ Got 2 bits, expected 0

error: Word length mismatch. Got 5 bits but expected 2 bits
  ┌─ testinput:2:3
  │
2 │   a - a + 1
  │   ^^^^^^^^^ Got 5 bits, expected 2


